use sp instead of dp for font sizes
Android's Design guide recommends using the following text sizes:
	12sp, 14sp, 18sp, 22sp

--- a/res/layout/dialog_statslookup.xml
+++ b/res/layout/dialog_statslookup.xml
@@ -6,7 +6,7 @@ android:orientation="vertical">
 	<com.chess.genesis.view.RobotoText
 	android:text="Enter Username:"
 	android:textColor="#f000"
-	android:textSize="16dp"/>
+	android:textSize="14sp"/>
 	<com.chess.genesis.view.RobotoEditText
 	android:id="@+id/username"
 	style="@style/FillWidth"
