--- a/res/layout/fragment_userstats.xml
+++ b/res/layout/fragment_userstats.xml
@@ -10,7 +10,7 @@ android:orientation="vertical">
 	android:padding="6dp"
 	android:text="User Stats"
 	android:textColor="#ffff"
-	android:textSize="14dp"/>
+	android:textSize="14sp"/>
 	<ScrollView
 	style="@style/FillBoth">
 	<RelativeLayout
@@ -26,14 +26,14 @@ android:orientation="vertical">
 		style="@style/FillWidth"
 		android:gravity="center"
 		android:textStyle="bold"
-		android:textSize="20dp"/>
+		android:textSize="22sp"/>
 		<com.chess.genesis.view.RobotoText
 		android:id="@+id/joined"
 		android:layout_toRightOf="@id/avatar"
 		android:layout_below="@id/username"
 		style="@style/FillWidth"
 		android:gravity="center"
-		android:textSize="15dp"
+		android:textSize="14sp"
 		android:text="Joined:"/>
 		<com.chess.genesis.view.RobotoText
 		android:id="@+id/text01"
@@ -41,7 +41,7 @@ android:orientation="vertical">
 		android:layout_below="@id/joined"
 		style="@style/FillWidth"
 		android:gravity="center"
-		android:textSize="15dp"
+		android:textSize="14sp"
 		android:text="Last Activity:"/>
 		<com.chess.genesis.view.RobotoText
 		android:id="@+id/last_activity"
@@ -49,7 +49,7 @@ android:orientation="vertical">
 		android:layout_below="@id/text01"
 		style="@style/FillWidth"
 		android:gravity="center"
-		android:textSize="15dp"/>
+		android:textSize="14sp"/>
 		<View
 		android:id="@+id/layout01"
 		android:layout_below="@id/avatar"
@@ -66,19 +66,19 @@ android:orientation="vertical">
 			android:id="@+id/apsr"
 			android:layout_gravity="center"
 			android:textStyle="bold"
-			android:textSize="18dp"
+			android:textSize="18sp"
 			android:padding="8dp"
 			android:text="Average PSR: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/gpsr"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Genesis: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/rpsr"
 			android:layout_gravity="center"
 			android:paddingBottom="6dp"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Regular: "/>
 		</com.chess.genesis.view.ExpandablePanel>
 		<com.chess.genesis.view.ExpandablePanel
@@ -90,13 +90,13 @@ android:orientation="vertical">
 			android:id="@+id/total_games"
 			android:layout_gravity="center"
 			android:textStyle="bold"
-			android:textSize="18dp"
+			android:textSize="18sp"
 			android:padding="8dp"
 			android:text="Games Played: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/genesis_games"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Genesis: "/>
 			<FrameLayout
 			style="@style/FillWidth">
@@ -104,13 +104,13 @@ android:orientation="vertical">
 				android:id="@+id/genesis_random_games"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/genesis_invite_games"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 			<FrameLayout
@@ -123,7 +123,7 @@ android:orientation="vertical">
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/regular_games"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Regular: "/>
 			<FrameLayout
 			style="@style/FillWidth"
@@ -132,13 +132,13 @@ android:orientation="vertical">
 				android:id="@+id/regular_random_games"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/regular_invite_games"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 		</com.chess.genesis.view.ExpandablePanel>
@@ -151,13 +151,13 @@ android:orientation="vertical">
 			android:id="@+id/total_wins"
 			android:layout_gravity="center"
 			android:textStyle="bold"
-			android:textSize="18dp"
+			android:textSize="18sp"
 			android:padding="8dp"
 			android:text="Wins: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/genesis_wins"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Genesis: "/>
 			<FrameLayout
 			style="@style/FillWidth">
@@ -165,13 +165,13 @@ android:orientation="vertical">
 				android:id="@+id/genesis_random_wins"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/genesis_invite_wins"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 			<FrameLayout
@@ -184,7 +184,7 @@ android:orientation="vertical">
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/regular_wins"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Regular: "/>
 			<FrameLayout
 			style="@style/FillWidth"
@@ -193,13 +193,13 @@ android:orientation="vertical">
 				android:id="@+id/regular_random_wins"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/regular_invite_wins"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 		</com.chess.genesis.view.ExpandablePanel>
@@ -212,13 +212,13 @@ android:orientation="vertical">
 			android:id="@+id/total_losses"
 			android:layout_gravity="center"
 			android:textStyle="bold"
-			android:textSize="18dp"
+			android:textSize="18sp"
 			android:padding="8dp"
 			android:text="Losses: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/genesis_losses"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Genesis: "/>
 			<FrameLayout
 			style="@style/FillWidth">
@@ -226,13 +226,13 @@ android:orientation="vertical">
 				android:id="@+id/genesis_random_losses"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/genesis_invite_losses"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 			<FrameLayout
@@ -245,7 +245,7 @@ android:orientation="vertical">
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/regular_losses"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Regular: "/>
 			<FrameLayout
 			style="@style/FillWidth"
@@ -254,13 +254,13 @@ android:orientation="vertical">
 				android:id="@+id/regular_random_losses"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/regular_invite_losses"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 		</com.chess.genesis.view.ExpandablePanel>
@@ -273,13 +273,13 @@ android:orientation="vertical">
 			android:id="@+id/total_resigns"
 			android:layout_gravity="center"
 			android:textStyle="bold"
-			android:textSize="18dp"
+			android:textSize="18sp"
 			android:padding="8dp"
 			android:text="Resigns: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/genesis_resigns"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Genesis: "/>
 			<FrameLayout
 			style="@style/FillWidth">
@@ -287,13 +287,13 @@ android:orientation="vertical">
 				android:id="@+id/genesis_random_resigns"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/genesis_invite_resigns"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 			<FrameLayout
@@ -306,7 +306,7 @@ android:orientation="vertical">
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/regular_resigns"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Regular: "/>
 			<FrameLayout
 			style="@style/FillWidth"
@@ -315,13 +315,13 @@ android:orientation="vertical">
 				android:id="@+id/regular_random_resigns"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/regular_invite_resigns"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 		</com.chess.genesis.view.ExpandablePanel>
@@ -334,13 +334,13 @@ android:orientation="vertical">
 			android:id="@+id/total_ties"
 			android:layout_gravity="center"
 			android:textStyle="bold"
-			android:textSize="18dp"
+			android:textSize="18sp"
 			android:padding="8dp"
 			android:text="Draws: "/>
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/genesis_ties"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Genesis: "/>
 			<FrameLayout
 			style="@style/FillWidth">
@@ -348,13 +348,13 @@ android:orientation="vertical">
 				android:id="@+id/genesis_random_ties"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/genesis_invite_ties"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 			<FrameLayout
@@ -367,7 +367,7 @@ android:orientation="vertical">
 			<com.chess.genesis.view.RobotoText
 			android:id="@+id/regular_ties"
 			android:layout_gravity="center"
-			android:textSize="16dp"
+			android:textSize="14sp"
 			android:text="Regular: "/>
 			<FrameLayout
 			style="@style/FillWidth"
@@ -376,13 +376,13 @@ android:orientation="vertical">
 				android:id="@+id/regular_random_ties"
 				android:layout_gravity="left"
 				android:paddingLeft="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Random: "/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/regular_invite_ties"
 				android:layout_gravity="right"
 				android:paddingRight="16dp"
-				android:textSize="16dp"
+				android:textSize="14sp"
 				android:text="Invite: "/>
 			</FrameLayout>
 		</com.chess.genesis.view.ExpandablePanel>
