--- a/res/layout/dialog_cputime.xml
+++ b/res/layout/dialog_cputime.xml
@@ -14,7 +14,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:id="@+id/time"
 		android:layout_width="72dp"/>
 		<com.chess.genesis.view.RobotoText
-		android:textSize="18dp"
+		android:textSize="18sp"
 		android:layout_marginLeft="6dp"
 		android:textColor="#000000"
 		android:layout_gravity="center"
