--- a/res/layout/dialog_genesis_rules.xml
+++ b/res/layout/dialog_genesis_rules.xml
@@ -11,7 +11,7 @@ android:orientation="vertical">
 		android:id="@+id/agree"/>
 		<com.chess.genesis.view.RobotoText
 		android:textColor="#000000"
-		android:textSize="18dp"
+		android:textSize="18sp"
 		android:text="I Understand"/>
 	</LinearLayout>
 </LinearLayout>
