--- a/res/layout/fragment_game.xml
+++ b/res/layout/fragment_game.xml
@@ -11,12 +11,12 @@ android:orientation="vertical">
 		android:id="@+id/white_name"
 		android:gravity="center"
 		android:padding="6dp"
-		android:textSize="14dp"/>
+		android:textSize="14sp"/>
 		<com.chess.genesis.view.TabText
 		android:id="@+id/black_name"
 		android:gravity="center"
 		android:padding="6dp"
-		android:textSize="14dp"/>
+		android:textSize="14sp"/>
 	</com.chess.genesis.view.ManualPanel>
 	<ViewFlipper
 	style="@style/FillWidth"
