--- a/res/layout/fragment_gamelist_online.xml
+++ b/res/layout/fragment_gamelist_online.xml
@@ -10,7 +10,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:padding="4dp"
 		android:layout_gravity="center"
 		android:gravity="center"
-		android:textSize="16dp"
+		android:textSize="14sp"
 		android:text="Searching For Opponents..."/>
 	</FrameLayout>
 	<com.chess.genesis.view.SwipeTabs
