--- a/res/layout/fragment_msgbox.xml
+++ b/res/layout/fragment_msgbox.xml
@@ -10,7 +10,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	android:padding="6dp"
 	android:text="Chat"
 	android:textColor="#ffff"
-	android:textSize="14dp"/>
+	android:textSize="14sp"/>
 	<ListView
 	android:id="@+id/msg_list"
 	android:layout_below="@id/tabtxt"
@@ -30,7 +30,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 		android:id="@+id/submit_msg"
 		android:text="Submit"
 		android:layout_height="40dp"
-		android:textSize="15dp"
+		android:textSize="14sp"
 		android:textColor="#fff"
 		android:layout_gravity="center"
 		android:background="@drawable/btn_green"/>
