--- a/res/layout/msglist_cell.xml
+++ b/res/layout/msglist_cell.xml
@@ -9,13 +9,13 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_alignParentLeft="true"
 		android:paddingLeft="12dp"
 		android:textStyle="bold"
-		android:textSize="18dp"/>
+		android:textSize="18sp"/>
 		<com.chess.genesis.view.RobotoText
 		android:id="@+id/time"
 		android:layout_alignParentRight="true"
 		android:paddingRight="12dp"
 		android:textStyle="italic"
-		android:textSize="12dp"/>
+		android:textSize="12sp"/>
 	</RelativeLayout>
 	<com.chess.genesis.view.RobotoText
 	android:id="@+id/msg"
@@ -23,5 +23,5 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:paddingLeft="24dp"
 	android:paddingRight="12dp"
 	android:paddingBottom="8dp"
-	android:textSize="14dp"/>
+	android:textSize="14sp"/>
 </RelativeLayout>
