--- a/res/layout/number_spinner.xml
+++ b/res/layout/number_spinner.xml
@@ -36,7 +36,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_gravity="center"
 		android:singleLine="true"
 		android:textColor="@android:color/primary_text_light"
-		android:textSize="24dp"
+		android:textSize="22sp"
 		android:background="#0000"/>
 	</FrameLayout>
 
