--- a/res/layout/spinner_dropdown.xml
+++ b/res/layout/spinner_dropdown.xml
@@ -5,7 +5,7 @@ style="?android:attr/spinnerDropDownItemStyle"
 android:layout_height="?android:attr/listPreferredItemHeight"
 android:layout_width="match_parent"
 android:padding="12dp"
-android:textSize="24dp"
+android:textSize="22sp"
 android:textColor="#000000"
 android:singleLine="true"
 android:ellipsize="marquee"/>
