load scaled image refferenced in MyImageView on demand
ImageViews hold onto the originally decoded Bitmap from resources to
be able to resize the image when needed. But since the main use case
for MyImageView is to load a static sized scaled down version of an
oversized original, much memory is wasted.

To reduce memory usage and improve performance several changes have
been made. Only the resource id of the image is stored. It can be set
in the constructor using AttributeSet or by calling setResId(int). In
onMeasure() only the image demensions are decoded. Finally, in onDraw()
the scaled image is decoded in a background thread.

--- a/res/layout/fragment_userstats.xml
+++ b/res/layout/fragment_userstats.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:genesis="http://schemas.android.com/apk/res/com.chess.genesis"
 android:orientation="vertical">
 	<com.chess.genesis.view.TabText
 	android:id="@+id/tabtxt"
@@ -17,7 +18,7 @@ android:orientation="vertical">
 	style="@style/FillWidth">
 		<com.chess.genesis.view.MyImageView
 		android:id="@+id/avatar"
-		android:src="@drawable/avatar"
+		genesis:src="@drawable/avatar"
 		android:layout_height="96dp"
 		android:layout_width="96dp"/>
 		<com.chess.genesis.view.RobotoText
