--- a/res/layout/fragment_mainmenu.xml
+++ b/res/layout/fragment_mainmenu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
+xmlns:genesis="http://schemas.android.com/apk/res/com.chess.genesis">
 	<com.chess.genesis.view.RobotoText
 	android:id="@+id/welcome"
 	android:paddingLeft="6dp"
@@ -17,7 +17,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/local_game"
 				android:padding="12dp"
-				android:src="@drawable/main_local"/>
+				genesis:src="@drawable/main_local"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/local_game_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -27,7 +27,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/online_game"
 				android:padding="12dp"
-				android:src="@drawable/main_online"/>
+				genesis:src="@drawable/main_online"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/online_game_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -37,7 +37,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/user_stats"
 				android:padding="12dp"
-				android:src="@drawable/main_stats"/>
+				genesis:src="@drawable/main_stats"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/archive_game_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -49,7 +49,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/howtoplay"
 				android:padding="12dp"
-				android:src="@drawable/main_howto"/>
+				genesis:src="@drawable/main_howto"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/howtoplay_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -59,7 +59,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/settings"
 				android:padding="12dp"
-				android:src="@drawable/main_settings"/>
+				genesis:src="@drawable/main_settings"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/settings_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -69,7 +69,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/feedback"
 				android:padding="12dp"
-				android:src="@drawable/main_feedback"/>
+				genesis:src="@drawable/main_feedback"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/feedback_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -81,7 +81,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 				<com.chess.genesis.view.MyImageView
 				android:id="@+id/login"
 				android:padding="12dp"
-				android:src="@drawable/main_login"/>
+				genesis:src="@drawable/main_login"/>
 				<com.chess.genesis.view.RobotoText
 				android:id="@+id/login_txt"
 				android:layout_gravity="bottom|center_horizontal"
@@ -91,7 +91,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	</TableLayout>
 	<com.chess.genesis.view.ManualPanel
 	android:id="@+id/layout01"
-	panel:sizes="1/2"
+	genesis:sizes="1/2"
 	android:layout_marginBottom="3dp"
 	android:layout_alignParentBottom="true">
 		<com.chess.genesis.view.MyImageView
