--- a/res/layout/include_botbar.xml
+++ b/res/layout/include_botbar.xml
@@ -7,10 +7,9 @@ android:id="@+id/botbar">
 	android:layout_height="50dp"
 	android:layout_width="match_parent"
 	android:background="@drawable/bluebar_bot"/>
-	<com.google.ads.AdView
+	<com.google.android.gms.ads.AdView
 	android:id="@+id/adView"
 	android:layout_gravity="bottom|center_horizontal"
-	ads:adUnitId="a14efd535f17368"
-	ads:refreshInterval="60"
+	ads:adUnitId="ca-app-pub-2845622471929525/8395842892"
 	ads:adSize="BANNER"/>
 </FrameLayout>
