--- a/res/layout/activity_game_online.xml
+++ b/res/layout/activity_game_online.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
+xmlns:panel="http://schemas.android.com/apk/res-auto">
 	<com.chess.genesis.view.ManualPanel
 	android:id="@+id/layout01"
 	style="@style/BlueBar"
