--- a/res/layout/dialog_base_okcancel.xml
+++ b/res/layout/dialog_base_okcancel.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
+xmlns:panel="http://schemas.android.com/apk/res-auto">
 	<RelativeLayout
 	android:id="@+id/body"
 	style="@style/FillWidth"
