--- a/res/layout/dialog_submitmove_phone.xml
+++ b/res/layout/dialog_submitmove_phone.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chess.genesis.view.ManualPanel
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis"
+xmlns:panel="http://schemas.android.com/apk/res-auto"
 android:layout_gravity="bottom"
 style="@style/BlueBar"
 panel:sizes="1/2">
