--- a/res/layout/fragment_menubar.xml
+++ b/res/layout/fragment_menubar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chess.genesis.view.ManualPanel
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis"
+xmlns:panel="http://schemas.android.com/apk/res-auto"
 panel:sizes="5,1/6">
 	<View
 	style="@style/TopBlueBar"/>
