--- a/res/layout/fragment_msgbox.xml
+++ b/res/layout/fragment_msgbox.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
+xmlns:panel="http://schemas.android.com/apk/res-auto">
 	<com.chess.genesis.view.TabText
 	android:id="@+id/tabtxt"
 	android:background="#ff383838"
