--- a/res/layout/fragment_userstats.xml
+++ b/res/layout/fragment_userstats.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:genesis="http://schemas.android.com/apk/res/com.chess.genesis"
+xmlns:genesis="http://schemas.android.com/apk/res-auto"
 android:orientation="vertical">
 	<com.chess.genesis.view.TabText
 	android:id="@+id/tabtxt"
