--- a/res/layout/include_board_nav.xml
+++ b/res/layout/include_board_nav.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chess.genesis.view.ManualPanel
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis"
+xmlns:panel="http://schemas.android.com/apk/res-auto"
 panel:sizes="3,1,1,1/6">
 	<ImageButton
 	android:id="@+id/place_piece"
