--- a/res/layout/include_botbar.xml
+++ b/res/layout/include_botbar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+xmlns:ads="http://schemas.android.com/apk/res-auto"
 android:id="@+id/botbar">
 	<View
 	android:layout_height="50dp"
