--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,21 +3,18 @@
 	<color name="white">#ffffffff</color>
 	<color name="black">#ff000000</color>
 	<color name="clear">#00ffffff</color>
-	<color name="grey">#ff888888</color>
-	<color name="grey_light">#ffcccccc</color>
-	<color name="red">#ffee0000</color>
-	<color name="red_light">#ffee4433</color>
-	<color name="red_dark">#ffcc0000</color>
-	<color name="orange">#ffff8800</color>
-	<color name="green_teal">#ff33bb44</color>
-	<color name="green_dark">#ff449900</color>
-	<color name="teal_pastel">#ffeeffff</color>
-	<color name="blue_neon_tr">#8800bbee</color>
-	<color name="blue_neon">#ff00bbee</color>
-	<color name="blue_dark">#ff3366aa</color>
-	<color name="blue_navy">#ff6688bb</color>
-	<color name="blue_navy_dark">#ff446699</color>
-	<color name="blue_pastel">#ffcceeff</color>
-	<color name="purple_light">#ffaa99cc</color>
-	<color name="purple_pastel">#ffddddff</color>
+	<color name="grey_400">#ffbdbdbd</color>
+	<color name="red_500">#fff44336</color>
+	<color name="red_A700">#ffd50000</color>
+	<color name="orange_500">#ffff9800</color>
+	<color name="green_light_A700">#ff64dd17</color>
+	<color name="cyan_50">#ffe0f7fa</color>
+	<color name="blue_light_500_tr">#8803a9f4</color>
+	<color name="blue_light_500">#ff03a9f4</color>
+	<color name="blue_800">#ff1565c0</color>
+	<color name="blue_navy_400">#ff5c84c0</color>
+	<color name="blue_navy_500">#ff3f6eb5</color>
+	<color name="teal_A100">#ffa7ffeb</color>
+	<color name="purple_deep_300">#ff9575cd</color>
+	<color name="purple_deep_100">#ffd1c4e9</color>
 </resources>
