remove SwipeTabs and use FragmentPagerAdapter/PagerTabStrip
SwipeTabs was having rendering issues when setting the target sdk to
a recent android version. Instead use the v4 support library's method
of adding swipable pages with tabs.

see: http://developer.android.com/training/implementing-navigation/lateral.html

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,7 +6,7 @@ android:orientation="vertical">
 	<com.chess.genesis.view.ManualPanel
 	android:id="@+id/board_names"
 	panel:sizes="1/2"
-	android:background="#ff383838">
+	android:background="@color/grey_900">
 		<com.chess.genesis.view.TabText
 		android:id="@+id/white_name"
 		android:gravity="center"
