--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
 	<color name="black">#ff000000</color>
 	<color name="clear">#00ffffff</color>
 	<color name="grey_400">#ffbdbdbd</color>
+	<color name="grey_900">#ff212121</color>
 	<color name="red_500">#fff44336</color>
 	<color name="red_A700">#ffd50000</color>
 	<color name="orange_500">#ffff9800</color>
